# rust-macro-lang-generator

./: Cargo.toml  README.md
crates/example/: Cargo.toml  build.rs
crates/example/src/: l0.rs  l1_stub.rs  l2_stub.rs  l3_stub.rs  main.rs
crates/transform/: Cargo.toml
crates/transform/src/: lib.rs
