[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/example"]

[workspace.dependencies]
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
quote2 = "0.9.0"
proc-macro2 = "1.0.93"
# minijinja = "2.8.0"
# serde = { version = "1.0.219", features = ["derive"] }
